@@ -351,22 +351,37 @@ namespace LinuxSampler {
             /**
              * Handle key group (a.k.a. exclusive group) conflicts
              */
-            void HandleKeyGroupConflicts(uint KeyGroup, Pool<Event>::Iterator& itNoteOnEvent) {
+        void HandleKeyGroupConflicts(uint KeyGroup, Pool<Event>::Iterator& itNoteOnEvent, bool UseRelease = false) {
                 if (KeyGroup) { // if this voice / key belongs to a key group
-                uint** ppKeyGroup = &MidiKeyboardManager<V>::ActiveKeyGroups[KeyGroup];
-                if (*ppKeyGroup) { // if there's already an active key in that key group
-                    MidiKey* pOtherKey = &MidiKeyboardManager<V>::pMIDIKeyInfo[**ppKeyGroup];
-                    // kill all voices on the (other) key
-                    typename RTList<V>::Iterator itVoiceToBeKilled = pOtherKey->pActiveVoices->first();
-                    typename RTList<V>::Iterator end               = pOtherKey->pActiveVoices->end();
-                    for (; itVoiceToBeKilled != end; ++itVoiceToBeKilled) {
-                        if (itVoiceToBeKilled->Type != Voice::type_release_trigger) {
-                            itVoiceToBeKilled->Kill(itNoteOnEvent);
-                            --pEngine->VoiceSpawnsLeft; //FIXME: just a hack, we should better check in StealVoice() if the voice was killed due to key conflict
+                    uint* pKeyGroup = MidiKeyboardManager<V>::ActiveKeyGroups[KeyGroup];
+                    if (pKeyGroup) { // if there's already an active key in that key group
+                        MidiKey* pOtherKey = &MidiKeyboardManager<V>::pMIDIKeyInfo[*pKeyGroup];
+
+                        if (UseRelease) {
+                            // send a note off to the other key
+                            if (pOtherKey->KeyPressed && itNoteOnEvent->Param.Note.Key != *pKeyGroup) {
+                                RTList<Event>::Iterator itNewEvent = pEngine->pGlobalEvents->allocAppend();
+                                if (itNewEvent) {
+                                    pOtherKey->ReleaseTrigger = false;
+                                    *itNewEvent = *itNoteOnEvent;
+                                    itNewEvent->Type = Event::type_note_off;
+                                    itNewEvent->Param.Note.Key = *pKeyGroup;
+                                    pEngine->ProcessNoteOff(this, itNewEvent);
+                                }
+                            }
+                        } else {
+                            // kill all voices on the (other) key
+                            typename RTList<V>::Iterator itVoiceToBeKilled = pOtherKey->pActiveVoices->first();
+                            typename RTList<V>::Iterator end               = pOtherKey->pActiveVoices->end();
+                            for (; itVoiceToBeKilled != end; ++itVoiceToBeKilled) {
+                                if (itVoiceToBeKilled->Type != Voice::type_release_trigger) {
+                                    itVoiceToBeKilled->Kill(itNoteOnEvent);
+                                    --pEngine->VoiceSpawnsLeft; //FIXME: just a hack, we should better check in StealVoice() if the voice was killed due to key conflict
+                                }
+                            }
                         }
                     }
                 }
-            }
             }
     };
 
